# testing-ai-tutor-rest-api

./: .coverage  .env  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: config.py  main.py
app/models/: schemas.py
app/routes/: tutor.py
app/services/: cloud_llm.py  local_llm.py
app/utils/: streaming.py
tests/integration/: test_explain.py  test_integration.py  test_personalize.py  test_stream.py
tests/unit/: test_unit.py
